SET(HEADERS_LIST
	forwarding.hpp
	series.hpp
	power_series.hpp
	poisson_series.hpp
	polynomial_term.hpp
	poisson_series_term.hpp
	settings.hpp
	exceptions.hpp
	tracing.hpp
	base_term.hpp
	rational.hpp
	thread_barrier.hpp
	polynomial.hpp
	kronecker_monomial.hpp
	echelon_size.hpp
	hash_set.hpp
	debug_access.hpp
	real_trigonometric_kronecker_monomial.hpp
	series_binary_operators.hpp
	thread_management.hpp
	kronecker_array.hpp
	static_vector.hpp
	real.hpp
	piranha.hpp
	symbol_set.hpp
	runtime_info.hpp
	series_multiplier.hpp
	array_key.hpp
	symbol.hpp
	t_substitutable_series.hpp
	detail/series_multiplier_fwd.hpp
	detail/mpfr.hpp
	detail/config_clang.hpp
	detail/math_tt_fwd.hpp
	detail/sfinae_types.hpp
	detail/real_fwd.hpp
	detail/degree_commons.hpp
	detail/base_term_fwd.hpp
	detail/km_commons.hpp
	detail/integer_fwd.hpp
	detail/poisson_series_fwd.hpp
	detail/series_fwd.hpp
	detail/rational_fwd.hpp
	detail/polynomial_fwd.hpp
	detail/config_gcc.hpp
	detail/symbol_set_fwd.hpp
	detail/vector_hasher.hpp
	detail/prepare_for_print.hpp
	detail/small_vector_fwd.hpp
	detail/is_digit.hpp
	print_coefficient.hpp
	type_traits.hpp
	univariate_monomial.hpp
	mp_integer.hpp
	integer.hpp
	math.hpp
	environment.hpp
	print_tex_coefficient.hpp
	cache_aligning_allocator.hpp
	trigonometric_series.hpp
	monomial.hpp
	small_vector.hpp
	aligned_memory.hpp
	dynamic_aligning_allocator.hpp
	thread_pool.hpp
)

# NOTE: this dummy cpp file is here with the sole purpose of getting the headers
# inside the project files generated by CMake.
add_library(piranha_dummy STATIC piranha_dummy.cpp ${HEADERS_LIST})
